--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL='postgresql+psycopg2://crystal:252525@localhost/gramm'
-SECRET_KEY = 'fcubj^3r(ky&@g!q%9t4(v4cgdx201882%@b8q4im(8a2(_+wy'
+SECRET_KEY = 'vu=2vl986n*b=(k%^vjruagv*4&19+(1=2-_rz3-7d)l^nf@bk'
 DEBUG=False
 DB_NAME='gramm'
 DB_USER='crystal'
