--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL='postgresql+psycopg2://crystal:252525@localhost/gramm'
-SECRET_KEY = 'zrhvqnl0@5+dk=ab0zryuwepi&av9tffb$oo*yu_h6sp*l-jrj'
+SECRET_KEY = ''
 DEBUG=False
 DB_NAME='gramm'
 DB_USER='crystal'
