--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 DATABASE_URL='postgresql+psycopg2://crystal:252525@localhost/gramm'
 SECRET_KEY = 'fcubj^3r(ky&@g!q%9t4(v4cgdx201882%@b8q4im(8a2(_+wy'
-DEBUG=False
+DEBUG=True
 DB_NAME='gramm'
 DB_USER='crystal'
 DB_PASSWORD='252525'
 DB_HOST='127.0.0.1'
-MODE='prod'
+MODE='dev'
 ALLOWED_HOSTS='*'
 DISABLE_COLLECTSTATIC=1
